Add some improvements: - Import font only once - Fix typos in comments